# sabela

./: .dockerignore  .gitattributes  .gitignore  .hlint.yaml  .prettierrc.json  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  Untitled.md  build.sh  cabal.project  fourmolu.yaml  sabela.cabal  test_examples.sh
eval/neuro-symbolic/: live-eval.workflow.mjs  run-one.sh  run.sh  siza-eval.cabal
eval/neuro-symbolic/app/: Main.hs
eval/neuro-symbolic/bench/: Main.hs
eval/neuro-symbolic/chat/: Main.hs
eval/neuro-symbolic/gate/: Main.hs
eval/neuro-symbolic/src/Eval/: Agent.hs  Applicability.hs  Bench.hs  BenchReport.hs  Chat.hs  ColdStart.hs  Corpus.hs  Discover.hs  ElisionLint.hs  Episode.hs  Exemplars.hs  FitCheck.hs  Gate.hs  GateMetrics.hs  GateReport.hs  GateResult.hs  HoleFit.hs  Messages.hs  Ollama.hs  Owned.hs  Preflight.hs  Provenance.hs  Provider.hs  Render.hs  Repair.hs  ReportGuard.hs  Salvage.hs  Sample.hs  Scaffold.hs  Task.hs  TaskSet.hs  Tools.hs  Transcript.hs  TranscriptLint.hs  VerdictLint.hs  VerifierLeakLint.hs
eval/neuro-symbolic/test/: Main.hs
eval/neuro-symbolic/test/Test/: AgentPromptSpec.hs  ApplicabilitySpec.hs  BenchSpec.hs  BudgetRetrySpec.hs  CapabilityBaselineSpec.hs  CapabilityCorpusSpec.hs  ChatSpec.hs  CodePathSpec.hs  ColdStartSpec.hs  DiscoverSpec.hs  ElisionLintSpec.hs  EpisodeSpec.hs  ExemplarsSpec.hs  FitCheckSpec.hs  GateLeverSpec.hs  GateResultSpec.hs  GradeRenderSpec.hs  GrammarSpec.hs  GuardGridSpec.hs  HealthGateSpec.hs  HoleFitSpec.hs  LintDumpSpec.hs  OllamaBodySpec.hs  OutcomeDistillLintSpec.hs  PreflightSpec.hs  ProposerStepSpec.hs  ProviderMapSpec.hs  ReasoningCorpusSpec.hs  RecoveredCallLintSpec.hs  RegressionFloorSpec.hs  RelinkProbeSpec.hs  RepairBudgetSpec.hs  RepairSpec.hs  SalvageSpec.hs  SampleVerifySpec.hs  ScaffoldSpec.hs  SchemaMatchSpec.hs  SpecVerifierSpec.hs  TaskSpec.hs  ToolsSpec.hs  (+6 more)
sabela-hub/: Dockerfile  cabal.project  sabela-hub.cabal
sabela-hub/app/: Main.hs
sabela-hub/demo-data/gallery/: attribution  index  tags
sabela-hub/demo-data/shares/1ea40001/: index.html  meta  source.md
sabela-hub/demo-data/shares/1ea40002/: index.html  meta
sabela-hub/demo-data/shares/1ea40003/: index.html  meta  source.md
sabela-hub/demo-data/shares/1ea40004/: index.html  meta  source.md
sabela-hub/demo-data/shares/1ea40005/: index.html  meta  source.md
sabela-hub/demo-data/shares/1ea40006/: index.html  meta  source.md
sabela-hub/demo-data/shares/1ea40007/: index.html  meta
sabela-hub/demo-data/shares/1ea40008/: index.html  meta  source.md
sabela-hub/demo-data/shares/1ea40009/: index.html  meta  source.md
sabela-hub/demo-data/shares/1ea40010/: index.html  meta
sabela-hub/demo-data/shares/1ea40011/: index.html  meta  source.md
sabela-hub/demo-data/shares/1ea40012/: index.html  meta  source.md
sabela-hub/demo-data/shares/1ea40013/: index.html  meta  source.md
sabela-hub/demo-data/shares/1ea40014/: index.html  meta  source.md
sabela-hub/demo-data/shares/b1ef0001/: index.html  meta
sabela-hub/demo-data/shares/c0de0001/: meta  source.md
sabela-hub/demo-data/shares/c56a0001/: index.html  meta
sabela-hub/demo-data/shares/ca1f0001/: meta
sabela-hub/demo-data/shares/f12a0001/: index.html  meta
sabela-hub/scripts/: seed-gallery.py
sabela-hub/scripts/dashboards/: bluefin.html  csg.html  frp.html  python.html
sabela-hub/src/Hub/: Allowlist.hs  Auth.hs  Banner.hs  CliAuth.hs  Config.hs  Docker.hs  Ecs.hs  Fork.hs  Gallery.hs  Meta.hs  OAuth.hs  Pages.hs  Proxy.hs  Reaper.hs  Republish.hs  Runner.hs  Session.hs  Share.hs  Types.hs  Users.hs
sabela-hub/src/Hub/Admin/: Api.hs  Page.hs
sabela-hub/src/Hub/CliAuth/: Page.hs
sabela-hub/src/Hub/Dashboard/: Reshell.hs
sabela-hub/src/Hub/Gallery/: Chrome.hs  Feed.hs  Lyah.hs  Public.hs  Render.hs  Seed.hs  SeedAssets.hs  SeedRender.hs  Store.hs  Style.hs
sabela-hub/src/Hub/Proxy/: Forward.hs
sabela-hub/src/Hub/Shares/: Api.hs
sabela-hub/static/: sabela-wasm-run.js
sabela-hub/test/: Main.hs
sabela-hub/test/Test/: AdminApiSpec.hs  AllowlistSpec.hs  AuthSpec.hs  BannerSpec.hs  CliAuthSpec.hs  DockerSpec.hs  GalleryRenderSpec.hs  GallerySpec.hs  LyahSpec.hs  MockEcs.hs  ProxyHelpers.hs  ProxyRoutesSpec.hs  ProxySpec.hs  ReshellSpec.hs  RunnerSpec.hs  SeedRenderSpec.hs  SeedSpec.hs  SessionSpec.hs  ShareSpec.hs  UsersSpec.hs
sabela-notebook/: sabela-notebook.cabal
sabela-notebook/src/Sabela/: Notebook.hs
sabela-notebook/src/Sabela/Notebook/: Anim.hs  Behavior.hs  Markup.hs  Picture.hs
siza-client/: siza-client.cabal
siza-client/app/: Main.hs
siza-client/src/Siza/: Annotate.hs  Cli.hs  Discover.hs  HubToken.hs  Language.hs  Login.hs  Mcp.hs  Preflight.hs  Provenance.hs  Retro.hs  Security.hs  Transport.hs
siza-client/src/Siza/Agent/: Ack.hs  Chat.hs  Check.hs  CheckExtract.hs  Deliverable.hs  Discover.hs  DiscoverTool.hs  EmitLedger.hs  Exemplars.hs  Futility.hs  Loop.hs  Messages.hs  NoteLedger.hs  OutcomeDistill.hs  Owned.hs  Preflight.hs  RenderContract.hs  Repair.hs  RepairGuard.hs  RepairLocate.hs  RepairTiers.hs  Sample.hs  Scaffold.hs  (+4 more)
siza-client/test/: Main.hs
siza-client/test/Test/: AdviceSpec.hs  AgentCheckSpec.hs  CandidateRankSpec.hs  CandidateSpec.hs  CardGateSpec.hs  CatalogueSim.hs  ContextCharsSpec.hs  CounterexampleSpec.hs  CrossSeamSpec.hs  DiscoverAbsentBoundSpec.hs  DiscoverCatalogueSpec.hs  DiscoverClosureSpec.hs  DiscoverConstructSpec.hs  DiscoverEmissionSpec.hs  DiscoverEnvelopeSpec.hs  DiscoverFixtures.hs  DiscoverGoalRankSpec.hs  DiscoverGoalSpec.hs  DiscoverHiddenDbSpec.hs  DiscoverHistorySpec.hs  DiscoverInvariantSpec.hs  DiscoverInventorySpec.hs  DiscoverLedgerSpec.hs  DiscoverMissSpec.hs  DiscoverModeGridSpec.hs  DiscoverRankPlainSpec.hs  DiscoverRecordBudgetSpec.hs  DiscoverRequestSpec.hs  DiscoverResolvedSpec.hs  DiscoverScopeConserveSpec.hs  DiscoverScopeLedgerSpec.hs  DiscoverSeedSpec.hs  DiscoverToolClientSpec.hs  DiscoverTruthSpec.hs  DiscoverUnitScrubSpec.hs  DiscoverVariantDedupSpec.hs  DiscoverWorldChangeSpec.hs  DoneSignalSpec.hs  EmitLedgerProtectSpec.hs  EmitLedgerSpec.hs  (+46 more)
(+542 files in other folders)
