cabal-version:      3.0
name:               sabela
version:            0.1.0.0
synopsis:           A reactive notebook environment for Haskell.
description:        A reactive notebook environment for Haskell.
homepage:           https://www.datahaskell.org/
license:            MIT
license-file:       LICENSE
author:             DataHaskell
maintainer:         mschavinda@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md, README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Sabela.Session,
                      Sabela.Model,
                      Sabela.Api,
                      Sabela.Handlers,
                      Sabela.Output,
                      Sabela.Errors,
                      Sabela.Server
    build-depends:    base >= 4 && < 5,
                      aeson >= 0.11.0.0 && < 3,
                      bytestring >= 0.10 && < 0.13,
                      containers >= 0.6.7 && < 0.9,
                      directory >= 1.3 && < 1.4,
                      filepath >= 1.4 && < 1.6,
                      http-types >= 0.12 && < 0.13,
                      process >= 1.6 && < 1.8,
                      scripths >= 0.1.0.2 && <= 1,
                      servant-server ^>= 0.20,
                      stm >= 2.4 && < 3,
                      tagged >= 0.8 && < 0.9,
                      temporary >= 1.3 && < 1.4,
                      text >= 1.2 && < 3,
                      wai >= 3.2 && < 3.3,
                      warp >= 3.3 && < 3.5
    hs-source-dirs:   src
    default-language: Haskell2010

executable sabela
  main-is: Main.hs
  build-depends: base >= 4 && < 5,
                 directory >= 1.3 && < 1.4,
                 warp >= 3.3  && < 3.5,
                 sabela
  hs-source-dirs:     app
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  ghc-options:        -Wall -threaded -rtsopts "-with-rtsopts=-N"

test-suite sabela-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    Test.SessionSpec
    build-depends:
        base >= 4 && < 5,
        hspec >= 2 && < 3,
        directory >= 1.3.0.0 && < 2,
        stm >= 2.4 && < 3,
        text >= 1.2 && < 3,
        sabela
