cabal-version:      3.0
name:               sabela
version:            0.1.0.0
synopsis:           A reactive notebook environment for Haskell.
description:        Sabela is a web-based reactive notebook for Haskell. Notebooks are
                    plain Markdown files whose code blocks become executable cells,
                    evaluated by a long-lived GHCi subprocess. Editing a cell
                    re-runs the cells that depend on it, and a bundled web IDE
                    (embedded in the executable) provides editing, rich output,
                    and slideshow/dashboard export.
homepage:           https://www.datahaskell.org/
license:            MIT
license-file:       LICENSE
author:             DataHaskell
maintainer:         mschavinda@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md, README.md
extra-source-files: static/index.html, static/dashboard.html, static/slideshow.html, data/api-reference.txt,
                    static/src/widgets/scatter.js,
                    static/src/widgets/sabela-widgets.js

source-repository head
    type:     git
    location: https://github.com/DataHaskell/sabela

common warnings
    ghc-options: -Wall

-- The shared contract sub-library: the typed wire (ToolName, ToolOutcome,
-- KernelState, CellResult, Output, SessionEvent), Api, and the AST parser.
-- Both lib:sabela and lib:siza-client depend on it, so the client stops
-- dragging the full server dependency set (warp/servant/process).
library sabela-contract
    import:           warnings
    visibility:       public
    autogen-modules:  Paths_sabela
    other-modules:    Paths_sabela
    exposed-modules:  Sabela.Anthropic.Types,
                      Sabela.Anthropic.Types.Request,
                      Sabela.Anthropic.Types.Response,
                      Sabela.Anthropic.Types.Stream,
                      Sabela.AI.Types,
                      Sabela.AI.CellResult,
                      Sabela.AI.KernelState,
                      Sabela.AI.Provenance,
                      Sabela.AI.RepairTrace,
                      Sabela.AI.Output,
                      Sabela.AI.Grammar,
                      Sabela.AI.Grammar.Synth,
                      Sabela.AI.Discover,
                      Sabela.AI.Examples,
                      Sabela.AI.HoleFits,
                      Sabela.AI.HoleRepair,
                      Sabela.AI.Health,
                      Sabela.AI.ModuleResolve,
                      Sabela.AI.Owned,
                      Sabela.AI.PromptCore,
                      Sabela.AI.Repair,
                      Sabela.AI.Salvage,
                      Sabela.AI.Similarity,
                      Sabela.AI.Spine,
                      Sabela.AI.Capabilities.ToolName,
                      Sabela.LLM.Ollama.Client,
                      Sabela.LLM.Ollama,
                      Sabela.LLM.Anthropic.Client,
                      Sabela.LLM.Anthropic,
                      Sabela.LLM.Message,
                      Sabela.LLM.Usage,
                      Sabela.LLM.Completion,
                      Sabela.LLM.Turn,
                      Sabela.LLM.Tool,
                      Sabela.LLM.Cancel,
                      Sabela.LLM.Provider,
                      Sabela.Ids,
                      Sabela.Model,
                      Sabela.SessionTypes,
                      Sabela.Api,
                      Sabela.Parse.Ast,
                      Sabela.Parse.Ast.Names,
                      Sabela.Parse.Ast.PatNodeBinders,
                      Sabela.Parse.Preprocess
    build-depends:    base >= 4 && < 5,
                      aeson >= 2.0 && < 3,
                      bytestring >= 0.10 && < 0.13,
                      containers >= 0.6.7 && < 0.9,
                      directory >= 1.3 && < 1.4,
                      filepath >= 1.4 && < 1.6,
                      ghc-lib-parser >= 9.6 && < 9.20,
                      ghc-lib-parser-ex >= 9.6 && < 9.20,
                      http-client >= 0.7 && < 0.10,
                      http-types >= 0.12 && < 0.13,
                      uniplate >= 1.6 && < 1.7,
                      scripths >= 0.5.3.0 && < 0.6,
                      stm >= 2.4 && < 3,
                      text >= 1.2 && < 3,
                      time >= 1.9 && < 2
    hs-source-dirs:   src-contract
    if impl(ghc >= 9.6)
        hs-source-dirs:   src-contract-ghc96
    else
        hs-source-dirs:   src-contract-ghc94
    default-language: Haskell2010

library
    import:           warnings
    autogen-modules:  Paths_sabela
    other-modules:    Paths_sabela
    exposed-modules:  Sabela.Anthropic,
                      Sabela.AI.Store,
                      Sabela.AI.Capabilities,
                      Sabela.AI.Capabilities.CapabilityApi,
                      Sabela.AI.Capabilities.CapabilityHelper,
                      Sabela.AI.Capabilities.CapabilitySearch,
                      Sabela.AI.Capabilities.Discover,
                      Sabela.AI.Capabilities.Edit,
                      Sabela.AI.Capabilities.Edit.HoleSearch,
                      Sabela.AI.Capabilities.Edit.Repair,
                      Sabela.AI.Capabilities.Edit.Run,
                      Sabela.AI.Capabilities.Kernel,
                      Sabela.AI.Capabilities.Notebook,
                      Sabela.AI.Capabilities.Query,
                      Sabela.AI.Capabilities.ApiRef,
                      Sabela.AI.Capabilities.ModuleSearch,
                      Sabela.AI.Capabilities.Resolve,
                      Sabela.AI.PeekData,
                      Sabela.AI.Capabilities.Scratchpad,
                      Sabela.AI.Capabilities.Tools,
                      Sabela.AI.Capabilities.Tools.Notebook,
                      Sabela.AI.Capabilities.Tools.Query,
                      Sabela.AI.Capabilities.Util,
                      Sabela.AI.Doc,
                      Sabela.AI.Handles,
                      Sabela.AI.Orchestrator,
                      Sabela.AI.Orchestrator.Compact,
                      Sabela.AI.Orchestrator.Loop,
                      Sabela.AI.Capabilities.Edit.Assemble,
                      Sabela.AI.Orchestrator.Loop.Accept,
                      Sabela.AI.Orchestrator.Loop.Dispatch,
                      Sabela.AI.Orchestrator.Loop.Usage,
                      Sabela.AI.Orchestrator.Prompt,
                      Sabela.AI.Orchestrator.Trace,
                      Sabela.AI.ReferenceCard,
                      Sabela.Session,
                      Sabela.Session.Drain,
                      Sabela.Session.ParentPoller,
                      Sabela.Session.Proc,
                      Sabela.Session.Process,
                      Sabela.Session.Project,
                      Sabela.Session.Query,
                      Sabela.Session.Reader,
                      Sabela.Session.Timeout,
                      Sabela.Bridge,
                      Sabela.Dashboard,
                      Sabela.Deps,
                      Sabela.Export,
                      Sabela.Export.Analyze,
                      Sabela.Export.Block,
                      Sabela.Export.Reactive,
                      Sabela.Export.Trailing,
                      Sabela.Export.Widget,
                      Sabela.Parse,
                      Sabela.Parse.Normalize,
                      Sabela.Compiled,
                      Sabela.Reactivity,
                      Sabela.State,
                      Sabela.State.AIConfig,
                      Sabela.State.App,
                      Sabela.State.BridgeStore,
                      Sabela.State.Config,
                      Sabela.State.DependencyTracker,
                      Sabela.State.Environment,
                      Sabela.State.EventBus,
                      Sabela.State.NotebookStore,
                      Sabela.State.SessionManager,
                      Sabela.State.WidgetStore,
                      Sabela.Handlers,
                      Sabela.Handlers.Compile,
                      Sabela.Handlers.Exec,
                      Sabela.Handlers.Lifecycle,
                      Sabela.Handlers.Plan,
                      Sabela.Handlers.PlanErrors,
                      Sabela.Handlers.PostCompile,
                      Sabela.Handlers.Shared,
                      Sabela.Handlers.Python,
                      Sabela.Output,
                      Sabela.Output.Examples,
                      Sabela.Output.Scatter,
                      Sabela.Output.Widgets,
                      Sabela.Errors,
                      Sabela.Errors.Json,
                      Sabela.Diagnose,
                      Sabela.Diagnose.Packages,
                      Sabela.Discover,
                      Sabela.AI.DepRepair,
                      Sabela.AI.ExtRepair,
                      Sabela.AI.ImportRepair,
                      Sabela.AI.HoogleResolve,
                      Sabela.AI.Capability,
                      Sabela.Server,
                      Sabela.Server.Ai,
                      Sabela.Server.Api,
                      Sabela.Server.Export,
                      Sabela.Server.Files,
                      Sabela.Server.Import,
                      Sabela.Server.Notebook,
                      Sabela.Server.Run,
                      Sabela.Server.Static,
                      Sabela.Topo,
                      Sabela.Url,
                      Sabela.Platform,
                      Sabela.PythonSession
    build-depends:    base >= 4 && < 5,
                      aeson >= 2.0 && < 3,
                      bytestring >= 0.10 && < 0.13,
                      containers >= 0.6.7 && < 0.9,
                      directory >= 1.3 && < 1.4,
                      file-embed >= 0.0.11 && < 0.1,
                      filepath >= 1.4 && < 1.6,
                      ghc-lib-parser >= 9.6 && < 9.20,
                      ghc-lib-parser-ex >= 9.6 && < 9.20,
                      uniplate >= 1.6 && < 1.7,
                      hashable >= 1.3 && < 1.6,
                      http-client >= 0.7 && < 0.10,
                      http-types >= 0.12 && < 0.13,
                      process >= 1.6.4 && < 1.8,
                      scripths >= 0.5.3.0 && < 0.6,
                      servant-server >= 0.20 && < 0.21,
                      stm >= 2.4 && < 3,
                      temporary >= 1.3 && < 1.4,
                      text >= 1.2 && < 3,
                      time >= 1.9 && < 2,
                      wai >= 3.2 && < 3.3,
                      sabela:sabela-contract
    if !os(windows)
        build-depends:    unix >= 2.7 && < 2.9
    if os(windows)
        extra-libraries:  kernel32
    hs-source-dirs:   src
    default-language: Haskell2010

executable sabela
  main-is: Main.hs
  build-depends: base >= 4 && < 5,
                 aeson >= 2.0 && < 3,
                 bytestring >= 0.10 && < 0.13,
                 containers >= 0.6.7 && < 0.9,
                 directory >= 1.3 && < 1.4,
                 filepath >= 1.4 && < 1.6,
                 http-client-tls >= 0.3 && < 0.4,
                 text >= 1.2 && < 3,
                 process >= 1.6.4 && < 1.8,
                 warp >= 3.3  && < 3.5,
                 sabela,
                 sabela:sabela-contract
  if !os(windows)
    build-depends:    unix >= 2.7 && < 2.9
  hs-source-dirs:     app
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  ghc-options:        -Wall -threaded -rtsopts "-with-rtsopts=-N"

test-suite sabela-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    ghc-options:      -threaded -rtsopts "-with-rtsopts=-N"
    other-modules:    Test.NotebookAnimSpec,
                      Test.NotebookEditSpec,
                      Test.NotebookFrpSpec,
                      Test.NotebookPictureSpec,
                      Test.SessionSpec,
                      Test.SessionLoopSpec,
                      Test.SessionLiveSpec,
                      Test.StaleRunSpec,
                      Test.SwitchNotebookSpec,
                      Test.TopoSpec,
                      Test.TopoSpec.Helpers,
                      Test.CompiledPlanSpec,
                      Test.CompileEscalationSpec,
                      Test.ClassifyErrorSpec,
                      Test.ErrorsJsonSpec,
                      Test.JsonDiagSpec,
                      Test.CellShapeSpec,
                      Test.CellDefinesSpec,
                      Test.CheckTypeStructSpec,
                      Test.DiagnoseSpec,
                      Test.SpineSpec,
                      Test.ModuleResolveSpec,
                      Test.DiscoverToolSpec,
                      Test.DepRepairSpec,
                      Test.ExtRepairSpec,
                      Test.ImportRepairSpec,
                      Test.CapabilityApiSpec,
                      Test.CapabilitySearchSpec,
                      Test.HealthSpec,
                      Test.OwnedSpec,
                      Test.RepairEngineSpec,
                      Test.DiscoverGrammarSpec,
                      Test.HoogleResolveSpec,
                      Test.ResolveSpec,
                      Test.CapabilitySpec,
                      Test.NotebookViolationSpec,
                      Test.GrammarRouteSpec,
                      Test.HoleFitsSpec,
                      Test.LibDiscoverSpec,
                      Test.ExampleSearchSpec,
                      Test.ExecuteCellSpec,
                      Test.TopoSpec.Names,
                      Test.TopoSpec.Order,
                      Test.TopoSpec.Select,
                      Test.ExportSpec,
                      Test.DefaultExtsSpec,
                      Test.DepsMatchSpec,
                      Test.DepsRepairSpec,
                      Test.NotebookExportSpec,
                      Test.ParseSpec,
                      Test.PlatformSpec,
                      Test.OutputSpec,
                      Test.PreinstalledSpec,
                      Test.ProseRoundTripSpec,
                      Test.GenerationSpec,
                      Test.AiDocSpec,
                      Test.AiHandlesSpec,
                      Test.AiHistorySpec,
                      Test.AiRestSpec,
                      Test.CacheControlSpec,
                      Test.ProviderAdapterSpec,
                      Test.ConfigWireSpec,
                      Test.OrchestratorLoopSpec,
                      Test.VerifyDownstreamSpec,
                      Test.ToolInputRewriteSpec,
                      Test.PromptUnifySpec,
                      Test.ProviderSelectSpec,
                      Test.ApiRefSpec,
                      Test.CompactResultSpec,
                      Test.CycleMsgSpec,
                      Test.ScratchpadRenderSpec,
                      Test.ToolParseSpec,
                      Test.ToolOutcomeWireSpec,
                      Test.EvCellResultWireSpec,
                      Test.ProvenanceWireSpec,
                      Test.UploadSpec,
                      Test.UrlSpec,
                      Test.UsageEventSpec,
                      Test.UsageMergeSpec,
                      Test.WidgetsSpec,
                      Test.ApiWireSpec,
                      Test.CellResultWireSpec,
                      Test.KernelStateWireSpec,
                      Test.OutputChokepointWireSpec,
                      Test.SizaContractWireSpec,
                      Test.AdmissionSpec,
                      Test.AtomicAdmissionSpec,
                      Test.DiscoveryToolsPreSessionSpec,
                      Test.AwaitIdleSpec,
                      Test.MarkerSpec,
                      Test.RenderSpec,
                      Test.RepairTraceWireSpec,
                      Test.ReplProjectSpec,
                      Test.ExportGoldenSpec,
                      Test.ConfigurableTimeoutSpec,
                      Test.InterruptTimestampFilterSpec,
                      Test.OrphanSpec,
                      Test.QueryConcurrencySpec,
                      Test.QueryGuidanceSpec,
                      Test.TimeoutEscalationSpec,
                      Test.SessionGenSpec,
                      Test.PeekDataSpec
    build-depends:
        base >= 4 && < 5,
        sabela-notebook >= 0.1 && < 0.2,
        aeson >= 2.0 && < 3,
        bytestring >= 0.10 && < 0.13,
        containers >= 0.6.7 && < 0.9,
        hspec >= 2 && < 3,
        directory >= 1.3.0.0 && < 2,
        filepath >= 1.4 && < 1.6,
        http-client >= 0.7 && < 0.10,
        process >= 1.6.4 && < 1.8,
        scripths >= 0.5.1.0 && < 0.6,
        servant-server >= 0.20 && < 0.21,
        stm >= 2.4 && < 3,
        temporary >= 1.3 && < 1.4,
        text >= 1.2 && < 3,
        time >= 1.9 && < 2,
        sabela,
        sabela:sabela-contract
    if !os(windows)
        build-depends:    unix >= 2.7 && < 2.9

test-suite sabela-webdriver
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          WebDriverMain.hs
    other-modules:    Test.WebDriverSpec,
                      Test.WebDriverHelpers
    ghc-options:      -threaded -rtsopts "-with-rtsopts=-N"
    build-depends:
        base >= 4 && < 5,
        hspec >= 2 && < 3,
        webdriver >= 0.12 && < 0.13,
        http-client >= 0.7 && < 0.10,
        directory >= 1.3.0.0 && < 2,
        http-types >= 0.12 && < 0.13,
        network >= 3.0 && < 3.3,
        text >= 1.2 && < 3,
        process >= 1.6.4 && < 1.8,
        warp >= 3.3 && < 3.5,
        containers >= 0.6.7 && < 0.9,
        sabela
